# cargo-cite

./: .gitignore  Cargo.toml  README.md  ref.bib
.github/workflows/: rust.yml
src/: bib.rs  block.rs  file.rs  lib.rs  line.rs  main.rs
tests/: ref.bib  test_parse.rs
