[package]
name = "cargo-cite"
version = "0.1.0"
edition = "2021"

[dependencies]
biblatex = "0.9.3"
cargo-files-core = "0.2.1"
clap = "4.5.16"
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
hayagriva = "0.5.3"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
stderrlog = "0.6.0"
thiserror = "1.0.63"
