[package]
name = "cargo-cite"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Add bib citations to Rust docs"
readme = "README.md"
authors = ["Easton Potokar"]
repository = "https://github.com/contagon/cargo-cite"
keywords = ["cargo-subcommand", "biblatex", "cite", "documentation"]
categories = [
    "development-tools::cargo-plugins",
    "command-line-utilities",
    "parsing",
]

[dependencies]
cargo-files-core = "0.2.1"
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.1"
hayagriva = "0.5.3"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.10.6"
stderrlog = "0.6.0"
thiserror = "1.0.63"

[[bin]]
name = "cargo-cite"
path = "bin/cargo-cite.rs"
